deploy/k8s/sample-tracking/app-template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-tracking-app
  labels:
    app: sample-tracking
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sample-tracking
  template:
    metadata:
      labels:
        app: sample-tracking
        tier: web
    spec:
      volumes:
        - name: google-application-credentials
          secret:
            secretName: google-application-credentials
        - name: firebase-application-credentials
          secret:
            secretName: firebase-application-credentials
      containers:
        - name: sample-tracking-app
          image: gcr.io/pici-ereq/sample-tracking:${DEPLOY_VERSION}
          imagePullPolicy: Always
          command: [ "java" ]
          args: [ "-Xss4096k", "-Xmx23G", "-jar", "sample-tracking-standalone.jar", "server", "-p", "8989" ]
          resources:
            requests:
              memory: "24Gi"
          ports:
            - containerPort: 8989
          livenessProbe:
            httpGet:
              path: /api/health
              port: 8989
            initialDelaySeconds: 30
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /api/health
              port: 8989
            initialDelaySeconds: 30
            timeoutSeconds: 1
          volumeMounts:
            - name: google-application-credentials
              mountPath: /credentials/service-account.json
              subPath: service-account.json
            - name: firebase-application-credentials
              mountPath: /credentials/firebase-credentials.json
              subPath: firebase-credentials.json
