deploy/k8s/sample-tracking/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-tracking-service
  labels:
    app: sample-tracking
  annotations:
    beta.cloud.google.com/backend-config: '{"default": "ereq-backend-config"}'
spec:
  type: NodePort
  selector:
    app: sample-tracking
    tier: web
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8989
  sessionAffinity: ClientIP
