deploy/k8s/sample-tracking/app-ingress-template.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ereq-ingress
  annotations:
    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.global-static-ip-name: ereq-${ENVIRONMENT}
    networking.gke.io/managed-certificates: ereq-cert-${ENVIRONMENT}
  labels:
    app: sample-tracking
spec:
  backend:
    serviceName: sample-tracking-service
    servicePort: 80
